@@ -23,6 +23,8 @@ Changes in @NEW@:
       attempt to access was unsuccessful. (CNY-673, affects CNY-578)
     * Select better flavors for updateall when updating x86 troves
       on an x86_64 system (CNY-628)
+    * Fixed a bug that caused migrate behavior to not respect pins when 
+      the pinned troves were set to be erased (CNY-680).
 
 Changes in 1.0.23:
   o API Additions:
